<?xml version="1.0" encoding="utf-8"?>
<layout>
    <com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.cndll.shapetest.activity.SignActivity">

        <include
            android:id="@+id/titlebar"
            layout="@layout/titlebar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="8%h"
            app:layout_widthPercent="100%w" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_heightPercent="9%h"
            app:layout_widthPercent="90%w">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/sign_register_phone"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="20%w" />


            <EditText
                android:id="@+id/sign_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/sign_register_phone_content"
                android:inputType="phone"
                app:layout_heightPercent="80%h"
                app:layout_paddingLeftPercent="2%"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="80%w" />

        </com.zhy.android.percent.support.PercentLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_widthPercent="100%w" />


        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_heightPercent="9%h"
            app:layout_widthPercent="90%w">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/sign_auth_code"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="20%w" />


            <EditText
                android:id="@+id/sign_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/sign_auth_code_content"
                app:layout_heightPercent="80%h"
                app:layout_paddingLeftPercent="2%"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="50%w" />

            <TextView
                android:id="@+id/sign_send_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/sign_send_code"
                app:layout_heightPercent="65%h"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="30%w" />

        </com.zhy.android.percent.support.PercentLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_widthPercent="100%w" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_heightPercent="9%h"
            app:layout_widthPercent="90%w">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/sign_register_pwd"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="20%w" />


            <EditText
                android:id="@+id/sign_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/sign_register_pwd_content"
                app:layout_heightPercent="80%h"
                app:layout_paddingLeftPercent="2%"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="80%w" />

        </com.zhy.android.percent.support.PercentLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_widthPercent="100%w" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_register_tip"
            app:layout_marginTopPercent="2%"
            app:layout_textSizePercent="@string/text_size_mid"
            app:layout_widthPercent="90%w" />


        <Button
            android:id="@+id/sign_register_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/shape_button_gray"
            android:text="@string/sign_register"
            android:textColor="@color/titleBackGround"
            app:layout_heightPercent="7%h"
            app:layout_marginTopPercent="4%"
            app:layout_textSizePercent="@string/text_size_big"
            app:layout_widthPercent="90%w" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:id="@+id/sign_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            app:layout_heightPercent="45%h"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点击注册，表示同意"
                app:layout_textSizePercent="@string/text_size_big"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《用户协议》"
                android:textColor="@color/titleRed"
                app:layout_textSizePercent="@string/text_size_big"
                />

        </com.zhy.android.percent.support.PercentLinearLayout>


    </com.zhy.android.percent.support.PercentLinearLayout>

</layout>