<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="login"
            type="com.cndll.shapetest.bean.Login" />
        <variable
            name="handler"
            type="com.cndll.shapetest.event.HandlerClick"/>
    </data>

    <com.zhy.android.percent.support.PercentLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.cndll.shapetest.activity.LoginActivity">

        <include
            android:id="@+id/titlebar"
            layout="@layout/titlebar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="8%h"
            app:layout_widthPercent="100%w" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_heightPercent="10%h"
            app:layout_widthPercent="90%w">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/sign_register_phone"
                android:textColor="@color/contents_text"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_heightPercent="90%h"
                app:layout_widthPercent="20%w" />


            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@null"
                android:hint="请输入11位手机号"
                android:inputType="phone"
                android:text="@={login.userName}"
                app:layout_heightPercent="90%h"
                app:layout_marginTopPercent="2%"
                app:layout_paddingLeftPercent="2%"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="80%w" />

        </com.zhy.android.percent.support.PercentLinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg"
            ></View>

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_heightPercent="10%h"
            app:layout_widthPercent="90%w">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/sign_register_pwd"
                android:textColor="@color/contents_text"
                app:layout_heightPercent="90%h"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="20%w" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@null"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:text="@={login.password}"
                app:layout_heightPercent="90%h"
                app:layout_paddingLeftPercent="2%"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="80%w" />
        </com.zhy.android.percent.support.PercentLinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg"
            ></View>

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/shape_button_gray"
            android:text="登录"
            android:textColor="@color/text"
            app:layout_heightPercent="8%h"
            app:layout_marginTopPercent="4%"
            app:layout_textSizePercent="@string/text_size_big"
            app:layout_widthPercent="90%w" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_heightPercent="7%h"
            app:layout_marginBottomPercent="20%"
            app:layout_marginTopPercent="2%"
            app:layout_widthPercent="90%w">

            <TextView
                android:id="@+id/sign_fot_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|left"
                android:onClick="@{handler.updatePwd}"
                android:text="@string/sign_pwd"
                android:textColor="@color/titleRed"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="50%w" />

            <TextView
                android:id="@+id/sign_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|right"
                android:onClick="@{handler.sign}"
                android:text="@string/sign_phone"
                android:textColor="@color/text"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="50%w" />


        </com.zhy.android.percent.support.PercentLinearLayout>


        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_heightPercent="4%h">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_widthPercent="25%w" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="第三方登录"
                android:textColor="@color/text"
                app:layout_textSizePercent="@string/text_size_big"
                app:layout_widthPercent="30%w" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_widthPercent="25%w" />
        </com.zhy.android.percent.support.PercentLinearLayout>

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_heightPercent="25%h">

            <ImageView
                android:id="@+id/wechat"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:src="@mipmap/wechat"
                app:layout_heightPercent="20%w"
                app:layout_marginLeftPercent="20%w"
                app:layout_widthPercent="20%w" />


            <ImageView
                android:id="@+id/qq"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_toRightOf="@id/wechat"
                android:scaleType="fitXY"
                android:src="@mipmap/qq"
                app:layout_heightPercent="20%w"
                app:layout_marginLeftPercent="20%w"
                app:layout_widthPercent="20%w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qq"
                android:gravity="center"
                android:text="微信"
                app:layout_marginLeftPercent="25%w"
                app:layout_marginTopPercent="4%h"
                app:layout_textSizePercent="@string/text_size_mid"
                app:layout_widthPercent="10%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/qq"
                android:gravity="center"
                android:text="qq"
                app:layout_marginLeftPercent="65%w"
                app:layout_marginTopPercent="4%h"
                app:layout_textSizePercent="@string/text_size_mid"
                app:layout_widthPercent="10%" />
        </com.zhy.android.percent.support.PercentRelativeLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>

</layout>